--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,11 +1,12 @@
 name: Testing React App
 on: push
 jobs:
-  runs-on: ubuntu-latest
-  steps:
-    - name: Get the repo code
-      uses: actions/checkout@v3
-    - name: Install dependencies
-      run: npm ci
-    - name: Test application
-      run: npm run test
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get the repo code
+        uses: actions/checkout@v3
+      - name: Install dependencies
+        run: npm ci
+      - name: Test application
+        run: npm run test
