--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -10,25 +10,28 @@ jobs:
         run: npm ci
       - name: Test application
         run: npm run test
-  lint:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - name: Get the repo code
-        uses: actions/checkout@v3
-      - name: Install dependencies
-        run: npm ci
       - name: Lint application
         run: npm run lint
-  build:
-    runs-on: ubuntu-latest
-    needs: lint
-    steps:
-      - name: Get the repo code
-        uses: actions/checkout@v3
-      - name: Install dependencies
-        run: npm ci
       - name: Build application
         run: npm run build
-      - name: Deploy application
-        run: echo "Deploy application"
+#  lint:
+#    runs-on: ubuntu-latest
+#    needs: test
+#    steps:
+#      - name: Get the repo code
+#        uses: actions/checkout@v3
+#      - name: Install dependencies
+#        run: npm ci
+#
+#  build:
+#    runs-on: ubuntu-latest
+#    needs: lint
+#    steps:
+#      - name: Get the repo code
+#        uses: actions/checkout@v3
+#      - name: Install dependencies
+#        run: npm ci
+#      - name: Build application
+#        run: npm run build
+#      - name: Deploy application
+#        run: echo "Deploy application"
