--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -3,14 +3,19 @@ on:
   push:
     branches:
       - master
-    paths-ignore:
-      - '.github/workflows/*'
+#    paths-ignore:
+#      - '.github/workflows/*'
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Get the repo code
         uses: actions/checkout@v3
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         run: npm ci
       - name: Test application
@@ -19,24 +24,34 @@ jobs:
         run: npm run lint
       - name: Build application
         run: npm run build
-#  lint:
-#    runs-on: ubuntu-latest
-#    needs: test
-#    steps:
-#      - name: Get the repo code
-#        uses: actions/checkout@v3
-#      - name: Install dependencies
-#        run: npm ci
-#
-#  build:
-#    runs-on: ubuntu-latest
-#    needs: lint
-#    steps:
-#      - name: Get the repo code
-#        uses: actions/checkout@v3
-#      - name: Install dependencies
-#        run: npm ci
-#      - name: Build application
-#        run: npm run build
-#      - name: Deploy application
-#        run: echo "Deploy application"
+  lint:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Get the repo code
+        uses: actions/checkout@v3
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: node-modules-${{ hashFiles('**/package-lock.json') }}
+      - name: Install dependencies
+        run: npm ci
+
+  build:
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - name: Get the repo code
+        uses: actions/checkout@v3
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: node-modules-${{ hashFiles('**/package-lock.json') }}
+      - name: Install dependencies
+        run: npm ci
+      - name: Build application
+        run: npm run build
+      - name: Deploy application
+        run: echo "Deploy application"
