--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -26,7 +26,7 @@ jobs:
         run: npm run build
   lint:
     runs-on: ubuntu-latest
-    needs: test
+    needs: deploy
     steps:
       - name: Get the repo code
         uses: actions/checkout@v3
