--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -26,7 +26,6 @@ jobs:
         run: npm run build
   lint:
     runs-on: ubuntu-latest
-    needs: deploy
     steps:
       - name: Get the repo code
         uses: actions/checkout@v3
@@ -40,7 +39,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: lint
+    needs: [lint, deploy]
     steps:
       - name: Get the repo code
         uses: actions/checkout@v3
