--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -38,11 +38,20 @@ jobs:
         run: npm ci
 
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     needs: [lint, deploy]
+
+    strategy:
+      matrix:
+        node-version: [16, 18]
+        os: [ubuntu-latest, windows-latest]
     steps:
       - name: Get the repo code
         uses: actions/checkout@v3
+      - name: Install Node
+        run: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
       - name: Cache dependencies
         uses: actions/cache@v3
         with:
