--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Get the repo code
         uses: actions/checkout@v3
       - name: Install Node
-        run: actions/setup-node@v3
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
       - name: Cache dependencies
