--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -11,10 +11,12 @@ jobs:
     steps:
     - name: Print env build
       run: |
-        echo ${{ env.GH_SECRET }}
+        echo ${{ secrets.GH_SECRET }}
         echo ${{ env.NODE_ENV }}
   deploy:
     runs-on: ubuntu-latest
+    env:
+      NODE_ENV: production-deploy
     steps:
       - name: Deploy
         run: |
